feat: 1.新增获取指定会员信息接口 2.复盘评价字段类型修改
