# app/api/v1/docs/swagger.json
@@ -1511,6 +1511,35 @@
                 }
             }
         },
+        "/okr/user/basic": {
+            "get": {
+                "description": "获取指定会员基础信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Dootask"
+                ],
+                "summary": "获取指定会员基础信息",
+                "parameters": [
+                    {
+                        "type": "number",
+                        "description": "用户id",
+                        "name": "userid",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/interfaces.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/okr/user/info": {
             "get": {
                 "description": "获取用户信息",
@@ -1942,8 +1971,8 @@
             ],
             "properties": {
                 "comment": {
-                    "description": "评价",
-                    "type": "string"
+                    "description": "评价 1-做得好的 2-可提升的",
+                    "type": "integer"
                 },
                 "okr_id": {
                     "description": "okr id",
@@ -2319,6 +2348,12 @@
                 "operation": {
                     "type": "string"
                 },
+                "user_avatar": {
+                    "type": "string"
+                },
+                "user_nickname": {
+                    "type": "string"
+                },
                 "userid": {
                     "type": "integer"
                 }
@@ -2381,7 +2416,7 @@
             "type": "object",
             "properties": {
                 "comment": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "confidence": {
                     "type": "integer"
